--- a/frontproject/wwwroot/index/index.html
+++ b/frontproject/wwwroot/index/index.html
@@ -977,7 +977,7 @@
                             <p class="discount">$50 off</p>
                         </div>
                         <div class="time">
-                            <div id="countdown">
+                            <div id="timer">
                                 <ul>
                                     <li><span id="days"></span>days</li>
                                     <li><span id="hours"></span>Hours</li>
@@ -1486,6 +1486,7 @@
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
